--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@iconify-icon/react": "^2.3.0",
     "@iconify/react": "^4.1.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
